# sieve

./: .dir-locals.el  .gitignore  LICENSE  README.md  default.nix  flake.nix  sieve.cabal  sieve.nix
.github/workflows/: build.yml
app/: Main.hs
src/: Lib.hs
